src/test/deca/syntax/invalid/erreur_decl_init_2.deca
// Description:
//    mauvaise déclaration/initialisation
//
// Resultats:
//    Erreur de syntaxe
//    ligne 11 : "mismatched input '<' expecting {',', ';'}"

{ float x<2 ;}
